--- a/css/styles.css
+++ b/css/styles.css
@@ -7,15 +7,46 @@ body {
 ul,
 ol {
   list-style-type: none;
+  margin: 0;
+  padding-left: 0;
 }
 
 a {
   text-decoration: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+img {
+  display: block;
+}
+
+.container {
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
 .header-studio {
   color: #2e2f42;
 }
+
+.header-container {
+  display: flex;
+}
+
 .menu {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -23,27 +54,62 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  display: flex;
+  align-items: center;
 }
-.menu .menu-link {
+
+.ul-menu {
+  display: flex;
+  gap: 40px;
+}
+
+.menu .logo {
+  margin-right: 76px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
+
+.ul-menu .menu-link {
   color: #2e2f42;
+  padding: 24px 0;
+  display: block;
 }
-.menu .menu-link:hover {
+
+.ul-menu .menu-link:hover {
   color: #404bbf;
 }
 
-.menu .menu-link:focus {
+.ul-menu .menu-link:focus {
   color: #404bbf;
   text-decoration: underline;
 }
 
+.ul-menu:last-child {
+  margin-right: 0px;
+}
+
 .contacts {
   font-style: normal;
+  margin-left: auto;
 }
+
+.contacts-list {
+  display: flex;
+  gap: 40px;
+}
+
 .contacts .contacts-link {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  display: block;
+  padding: 24px 0;
 }
 
 .contacts .contacts-link:hover {
@@ -54,6 +120,7 @@ a {
 }
 .hero {
   background-color: #2e2f42;
+  padding: 188px 0;
 }
 
 .hero-title {
@@ -62,6 +129,8 @@ a {
   letter-spacing: 0.02em;
   color: #ffffff;
   text-align: center;
+  max-width: 496px;
+  margin: 0 auto 48px auto;
 }
 .button {
   font-family: "Roboto", sans-serif;
@@ -72,6 +141,12 @@ a {
   color: #ffffff;
   background-color: #4d5ae5;
   cursor: pointer;
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
+  margin: 0 auto;
 }
 .button:hover {
   background-color: #404bbf;
@@ -80,6 +155,24 @@ a {
 .button:focus {
   background-color: #404bbf;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.feature {
+  padding: 120px 0;
+}
+
 .feature-title {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -87,6 +180,20 @@ a {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.feature-list {
+  display: flex;
+  gap: 24px;
+}
+
+.feature-list-item {
+  width: calc((100% - 72px) / 4);
+}
+
+.feature-list:last-child {
+  margin-right: 0;
 }
 
 .section-title {
@@ -96,6 +203,7 @@ a {
   text-align: center;
   text-transform: capitalize;
   color: #2e2f42;
+  margin-bottom: 72px;
 }
 
 .text {
@@ -107,10 +215,20 @@ a {
 
 .team {
   background-color: #f4f4fd;
+  padding: 120px 0;
 }
+
+.team-list {
+  display: flex;
+  gap: 24px;
+}
+
 .team-card {
   background-color: #ffffff;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0 0 4px 4px;
 }
+
 .team-card .team-card-title {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -119,7 +237,9 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
+
 .team-card .team-card-text {
   font-size: 16px;
   line-height: 1.5;
@@ -128,25 +248,58 @@ a {
   color: #434455;
 }
 
+.worker {
+  padding: 32px 0;
+}
+
+.portfolio {
+  padding: 120px 0;
+}
+
+.portfolio-card {
+  display: flex;
+  column-gap: 24px;
+  flex-wrap: wrap;
+  row-gap: 48px;
+}
+
+.portfolio-card-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.portfolio-card-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.portfolio-card-item:nth-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+.portfolio-container {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
 .portfolio .portfolio-card-title {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  text-align: center;
+  margin-bottom: 8px;
   color: #2e2f42;
 }
 .portfolio .portfolio-card-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  text-align: center;
   color: #434455;
 }
 
 .footer {
   background-color: #2e2f42;
+  padding: 100px 0;
 }
 footer .text {
   font-size: 16px;
@@ -155,7 +308,7 @@ footer .text {
   color: #f4f4fd;
 }
 
-.logo {
+footer .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -163,7 +316,14 @@ footer .text {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  display: inline-block;
+  margin-bottom: 16px;
 }
+
+footer .text {
+  max-width: 264px;
+}
+
 .footer-studio {
   color: #f4f4fd;
 }
